# dockmaster

./: .gitignore  .travis.yml  Dockerfile-make  Dockmaster-Parser.html  Dockmaster.html  Makefile  NOTICE  README.md  TODO.md  doc-index.html  dockmaster.cabal  dockmaster.haddock  dockmaster.txt  index-frames.html  install.sh  mini_Dockmaster.html  stack.yaml
app/: Dm.hs  Dmc.hs  Main.hs
docs/: Dockmaster-Config-Parser.html  Dockmaster.html  doc-index.html  dockmaster.haddock  dockmaster.txt  index.html  mini_Dockmaster-Config-Parser.html  mini_Dockmaster-Parser.html  mini_Dockmaster.html
docs/src/: Dockmaster.Compose.html  Dockmaster.Config.Types.html  Dockmaster.Parser.html  Dockmaster.Types.html  Dockmaster.html
src/: Dockmaster.Config.Parser.html  Dockmaster.Utils.html  Dockmaster.hs
src/Dockmaster/: Compose.hs  Locator.hs  Parser.hs  Types.hs  Utils.hs
src/Dockmaster/Config/: Parser.hs  Types.hs
src/Options/: Utils.hs
test/: Spec.hs
test/fixtures/: dockmaster.yml
test/fixtures/compositions/exists/: dockmaster.yml
test/fixtures/compositions/rob_example/: dockmaster.yml
test/fixtures/invalid/: badtypes.yml  badtypes2.yml
test/fixtures/valid/: dockmaster.yml  dockmaster2.yml
